updated class page so links to /main. started creating /main. so far three containers. workout plans, daily challenges, and prgress. workout plans contain drop down menu of classes. bug has it so classes are behind container so only the top appears. classes links to workouts

--- a/client/src/styles/chooseChar.css
+++ b/client/src/styles/chooseChar.css
@@ -6,6 +6,7 @@
 h2 {
   margin-bottom: 20px;
   font-size: 24px;
+  color: black
 }
 
 .choosechar-grid {
@@ -40,7 +41,7 @@ h2 {
   margin-top: 10px;
   font-size: 18px;
   font-weight: bold;
-  color: white;
+  color: rgb(236, 230, 230);
 }
 
 .char-description {
@@ -65,7 +66,7 @@ h2 {
   font-size: 16px;
   cursor: pointer;
   background-color: #007BFF;
-  color: white;
+  color: rgb(236, 230, 230);
   border: none;
   border-radius: 5px;
   transition: background-color 0.3s;
